--- a/AxcelCapital/AxcelCapital.csproj
+++ b/AxcelCapital/AxcelCapital.csproj
@@ -156,6 +156,7 @@
     </Compile>
     <Compile Include="Models\Query.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recaptcha.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\AxcelCapCustom.css" />
