pushing completed service pages with responsive web

--- a/AxcelCapital/AxcelCapital.csproj
+++ b/AxcelCapital/AxcelCapital.csproj
@@ -182,8 +182,18 @@
     <Content Include="Images\4.jpg" />
     <Content Include="Images\5.jpg" />
     <Content Include="Images\6.jpg" />
+    <Content Include="Images\fin_bespokeSolutions.jpg" />
+    <Content Include="Images\fin_businessFinance.jpg" />
+    <Content Include="Images\fin_financialConsultancy.jpg" />
+    <Content Include="Images\fin_governmentAssist.jpg" />
+    <Content Include="Images\fin_invoiceFinance.jpg" />
+    <Content Include="Images\fin_personalFinance.jpg" />
+    <Content Include="Images\fin_propertyFinance.jpg" />
     <Content Include="Images\logo.png" />
     <Content Include="Images\merlion_1910x1000.jpg" />
+    <Content Include="Images\mobile_merlion.jpg" />
+    <Content Include="Images\mobile_singapore.jpg" />
+    <Content Include="Images\mobile_tranquil.jpg" />
     <Content Include="Images\singapore_1910x1000.jpg" />
     <Content Include="Images\stock_cleaning.jpg" />
     <Content Include="Images\stock_construction.jpg" />
